--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,11 +1,15 @@
-.header{
-    width: 100%;
-    line-height: 100px;
-    background-color: #f5ba13;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-left: 50px;
-    color: white;
-    box-shadow: 5px 3px 15px -5px rgba(0,0,0,0.3);
-  }
+.header {
+  width: 100%;
+  line-height: 100px;
+  background-color: #f5ba13;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 50px;
+  color: white;
+  box-shadow: 5px 3px 15px -5px rgba(0, 0, 0, 0.3);
+}
+
+.header img {
+  margin-right: 10px;
+}
